# cscrum

./: LICENSE  README.md
CodeSync/: filesync_client.py  filesync_server.py
RemotePy/: README.md  input_server.py  msg_queue.py  pyinter_core.py
ReverseModeling/doc/: c++逆向代码建模工具——使用说明书.docx  c++逆向代码建模工具——技术方案.docx  c++逆向代码建模工具——概要设计说明书.docx  多语言代码映射工具——概要设计说明书.docx  需求分析-草稿.docx
ReverseModeling/resource/doxygen-patch/: classdef.cpp  doxygen.cpp  doxywizard.cpp  main.cpp  xmlgen.cpp
ReverseModeling/src/: .gitignore  g_config.py
ReverseModeling/src/mapping_rule/: __init__.py  csharp_mapping_rule.py  jna_mapping_rule.py  mapping_rule_base.py
ReverseModeling/src/metadata/: __init__.py  clang_type.py  def_parser.py  def_parser2.py  index_parser.py  outline_parser.py  tools.py
ReverseModeling/src/test/: __init__.py  buildin_testcase.txt  function_test_csharp.py  function_test_jna.py  function_test_parser.py  test.py  test1.py  test_config.py  xml_test0.py
ReverseModeling/working/test/: test  test.h
ReverseModeling/working/test/model/outline/: test.outline
ReverseModeling/working/test/model/xml/: index.xml  struct__xml_char_encoding_handler.xml  test_8h.xml
SMake/: CMakeLists.txt
SMake/cmake/: FindCompilerChecker.cmake  FindlibDeps.cmake  compiler_conf.cmake
SMake/modules/CompilerChecker/: CMakeLists.txt
SMake/modules/CompilerChecker/cmake/: compiler_conf.cmake
SMake/modules/CompilerChecker/dependence/: dependence.cmake
SMake/modules/CompilerChecker/dependence/dlibs/: CMakeLists.txt
SMake/modules/CompilerChecker/dependence/dlibs/win_x86/Debug/: libpump_core-vc12-x86-dll-d-0_9_0.lib
SMake/modules/CompilerChecker/dependence/slibs/: CMakeLists.txt
SMake/modules/CompilerChecker/example/: CMakeLists.txt
SMake/modules/CompilerChecker/src/: CMakeLists.txt
SMake/modules/CompilerChecker/src/CompilerChecker/: CMakeLists.txt  __ClChecker.cpp  __ClChecker.h  __CmdService.cpp  __CmdService.h  __CodeTemplate.inl  __CompilerChecker.cpp  __CompilerChecker.h  __GlobalMgr.cpp  __GlobalMgr.h  __PrimaryBuilderChecker.cpp  __PrimaryBuilderChecker.h  __SecondaryBuilderChecker.cpp  __SecondaryBuilderChecker.h  __main.cpp
SMake/modules/CompilerChecker/test/: CMakeLists.txt
SafeJna/: pom.xml
SafeJna/JnaTest/JnaTest/: JnaTest.sln
SafeJna/JnaTest/JnaTest/JnaTest/: JnaTest.cpp  JnaTest.h  JnaTest.vcxproj  JnaTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
SafeJna/doc/: SafeJna.vsdx
SafeJna/src/main/java/SafeJna/: SafeJnaDaemon.java  SafeJnaLibrary.java  SafeJnaLocalCallback.java  SafeJnaNative.java  SafeJnaRemoteInvoke.java
SafeJna/src/main/java/SafeJna/InterTest/: InterTestApp.java  SafeJnaUtil.java
SafeJna/src/test/java/SafeJna/: AppTest.java
